--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+v0.7.3 - 13/06/2013
+  added 'built-in' command which doesn't display in help. executes xbmc commands blindly
+  added '!eventlog' command to display the last couple of lines from the eventlog
+
 v0.7.1 - 13/06/2013
   added 'dir' command for Inga
   added 'pwd' command to see where you are in the tree
