--- a/changelog.txt
+++ b/changelog.txt
@@ -1,38 +1,38 @@
 v0.7.4- 13/06/2013
-  added '.version' public command to see what version is running
+  Added: '.version' public command to see what version is running
 
 v0.7.3- 13/06/2013
-  added 'built-in' command which doesn't display in help. executes xbmc commands blindly
-  added '!eventlog' command to display the last couple of lines from the eventlog
+  Added: 'built-in' command which doesn't display in help. executes xbmc commands blindly
+  Added: '!eventlog' command to display the last couple of lines from the eventlog
 
 v0.7.1 - 13/06/2013
-  added 'dir' command for Inga
-  added 'pwd' command to see where you are in the tree
-  added 'cd ..' command to compliment 'up'
+  Added: 'dir' command for Inga
+  Added: 'pwd' command to see where you are in the tree
+  Added: 'cd ..' command to compliment 'up'
 
 v0.7.0 - 13/06/2013
-  switched to event driven xbmc communication with Monitor() objects
-  reworked the way xbmcbot is started and restarted when things like settings change
+  Added: switched to event driven xbmc communication with Monitor() objects
+  Added: reworked the way xbmcbot is started and restarted when things like settings change
 
 v0.5.5 - 12/06/2013
-  reworked all code for loading modules
-  auto reconnect and disconnect detection
+  Fixed: reworked all code for loading modules
+  Added: auto reconnect and disconnect detection
 
 v0.5.2 - 07/06/2013
-  fixed some issues with play/pause etc
+  Fixed: some issues with play/pause targeting wrong media type
 
 v0.5.1 - 07/06/2013
-  getting time caused a crash, now fixed
+  Fixed: getting time caused a crash
 
 v0.5.0 - 07/06/2013
-  added support for playing youtube urls (sometimes)
-  added auto-reconnect when the client crashes or disconnects
+  Added: support for playing youtube urls (sometimes)
+  Added: auto-reconnect when the client crashes or disconnects
 
 v0.4.3 - 06/06/2013
-  some code cleanup and better handling of sending data
+  Fixed: some minor issues with sending data
 
 v0.4.1 - 04/06/2013
-  fixed regexp for nick recognition in private messages
+  Added: regexp for nick recognition in private messages
 
 v0.4.0 - 04/06/2013
-  first public release
+  Added: first public release
