--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+v0.8.1 - 16/06/2013
+  Change: Added new experimental XBMC module 'xbmcnew.py' to the commands, it has sender independent communication and
+          features forward directory list caching. !unload xbmcctrl and !load xbmcnew to experiment at this stage
+
 v0.8.0 - 15/06/2013
   Fixed:  Made sure client keeps trying new nicks until connected (yes, you have to figure out from the logs which one it got)
   Fixed:  Do a final send before disconnecting, so you know it got the message
