--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v0.8.2 - 16/06/2013
+  Fixed: Minor bugfix when getting directory listings
+
 v0.8.1 - 16/06/2013
   Change: Added new experimental XBMC module 'xbmcnew.py' to the commands, it has sender independent communication and
           features forward directory list caching. !unload xbmcctrl and !load xbmcnew to experiment at this stage
