--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+v0.8.5 - 17/06/2013
+  Fixed: 'built-in' and 'json-rpc' failed to detect debug setting
+  Added: 'play' now plays directories recursively too
+
 v0.8.4 - 17/06/2013
   Fixed: rels didn't actually re-read the index
   Fixed: play still tried to use the old single-user index
